--- a/index.html
+++ b/index.html
@@ -427,11 +427,10 @@
             <p>Based on data, not feelings:</p>
             
             <div class="discovery">
-                <h3>For the Company</h3>
+                <h3>For the Company and Employees</h3>
                 <p><strong>1. Investigate the Asian Gap:</strong> Even if not proven, $8,606 differences deserve explanation.</p>
                 <p><strong>2. Fix the Loyalty Penalty:</strong> Reward long-term employees.</p>
-                <p><strong>3. Geographic Strategy:</strong> Expand remote work to access global talent at lower costs.</p>
-                <p><strong>4. Department Transparency:</strong> Publish salary bands to manage expectations.</p>
+                <p><strong>3. Department Selection: Choose carefully - departments show 67% salary variation.</p>
             </div>
 
         </div>
