--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
         <div class="hero">
             <h1>Employee Data Analysis</h1>
             <p>Uncovering Shocking Patterns Hidden in HR Data</p>
+            <p>By Ama Annor</p>
             <p><strong>1,000 Employees • 7 Departments • 3 Countries • 95% Statistical Confidence</strong></p>
         </div>
 
